Added the config node, added input parameter checker for received message
Signed-off-by: koustabhdolui <koustabh.here@gmail.com>

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   ],
   "node-red": {
     "nodes": {
-      "send-data": "send-data/send-data.js"
+      "send-data": "send-data/send-data.js",
+      "xively-config": "config-node/xively-config.js"
     }
   },
   "author": "Koustabh Dolui",
