--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   ],
   "node-red": {
     "nodes": {
-      "send-data": "send-data/send-data.js",
+      "send-data": "send-data/xively-send-data.js",
       "xively-config": "config-node/xively-config.js"
     }
   },
